--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,11 @@
             "Kalimero\\Casys\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Kalimero\\Casys\\Tests": "tests/"
+        }
+    },
     "extra": {
         "laravel": {
             "providers": [
@@ -24,5 +29,8 @@
             ]
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "require-dev": {
+        "orchestra/testbench": "9999999-dev"
+    }
 }
