--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "kalimeromk/casys-laravel",
   "description": "Integration of casys payment method",
   "require": {
-    "php": "^7.3",
+    "php": ">=7.3.0",
     "ext-json": "*"
     },
   "keywords": [
