--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
     }
   },
   "require-dev": {
-    "orchestra/testbench": "^5.0|^6.0|^7.0",
-    "mockery/mockery": "^1.4|^1.5"
+    "orchestra/testbench": "^5.0|^6.0|^7.0|8.0",
+    "mockery/mockery": "^1.4|^1.5|^1.6|^1.7"
   }
 }
