--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "kalimeromk/casys-laravel",
   "description": "Integration of casys payment method",
   "require": {
-    "php": ">=7.4.0",
+    "php": ">=8.0",
     "ext-json": "*",
     "ext-soap": "*"
   },
@@ -43,6 +43,7 @@
   },
   "require-dev": {
     "orchestra/testbench": "^5.0|^6.0|^7.0|8.0",
-    "mockery/mockery": "^1.4|^1.5|^1.6|^1.7"
+    "mockery/mockery": "^1.4|^1.5|^1.6|^1.7",
+    "larastan/larastan": "^2.0"
   }
 }
