--- a/composer.json
+++ b/composer.json
@@ -42,8 +42,10 @@
     }
   },
   "require-dev": {
-    "orchestra/testbench": "^5.0|^6.0|^7.0|8.0",
+    "orchestra/testbench": "^5.0|^6.0|^7.0|8.0|^9.0",
+    "phpunit/phpunit": "^8.0|^9.0|10.0|^11.0",
     "mockery/mockery": "^1.4|^1.5|^1.6|^1.7",
-    "larastan/larastan": "^2.0"
+    "larastan/larastan": "^3.0",
+    "rector/rector": "^2.1.0"
   }
 }
